[package]
name = "flif"
version = "0.1.0"
authors = ["Daniel Griffen <daniel@griffen.io>"]
license = "MIT"
description = "flif decoder written in pure Rust"
repository = "https://github.com/dgriffen/flif.rs"

exclude = [
    "resources/*",
]

[lib]
name = "flif"
path = "src/flif/lib.rs"

[[bin]]
name = "flif"
path = "src/bin/main.rs"
doc = false
required-features = ["binary"]

[[bin]]
name = "viewflif"
path = "src/bin/viewflif.rs"
doc = false
required-features = ["viewflif"]


[dependencies]
inflate = "0.3.0"
num-traits = "0.1.40"

#binary only dependencies
structopt = { version = "0.1.0", optional = true }
structopt-derive = { version = "0.1.0", optional = true }
png = { version = "0.11.0", optional = true }
sdl2 = { version = "0.31", optional = true , features= ["image"] }
image = {version = "*", optional = true}

[dev-dependencies]
png = "0.11.0"

[features]
binary = ["structopt", "structopt-derive", "png"]

viewflif = ["sdl2", "png", "structopt", "structopt-derive", "image"]
